Closed Bug 214487 Opened 22 years ago Closed 22 years ago

[FIX]Parsing border-side shorthands messes up with colors

Categories

(Core :: CSS Parsing and Computation, defect, P2)

defect

Tracking

()

RESOLVED FIXED
mozilla1.5beta

People

(Reporter: bzbarsky, Assigned: bzbarsky)

References

()

Details

Attachments

(1 file, 1 obsolete file)

The basic issue is that leaving a color out of a border-top/border-left/border-right/border-bottom shorthand sets the color to empty instead of NS_STYLE_COLOR_MOZ_USE_TEXT_COLOR. The border shorthand gets this right.
Priority: -- → P2
Target Milestone: --- → mozilla1.5beta
Attached patch patch (obsolete) — Splinter Review
Comment on attachment 128863 [details] [diff] [review] patch David, would you review? Pretty simple change...
Attachment #128863 - Flags: superreview?(dbaron)
Attachment #128863 - Flags: review?(dbaron)
Comment on attachment 128863 [details] [diff] [review] patch Why aren't we using the same code for parsing 'border' and 'border-left' etc.?
Attachment #128863 - Flags: superreview?(dbaron)
Attachment #128863 - Flags: superreview+
Attachment #128863 - Flags: review?(dbaron)
Attachment #128863 - Flags: review+
Attachment #128898 - Flags: superreview?(dbaron)
Attachment #128898 - Flags: review?(dbaron)
Attachment #128898 - Flags: superreview?(dbaron)
Attachment #128898 - Flags: superreview+
Attachment #128898 - Flags: review?(dbaron)
Attachment #128898 - Flags: review+
Checked that second patch in.
.
Status: NEW → RESOLVED
Closed: 22 years ago
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: