Fix border-side parsing to not mess up the color.  Bug 214487, r+sr=dbaron